--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -13,16 +13,6 @@
                     <div class="usr-img img-responsive">{% avatar node.author %}</div>
                 </div>
                 <div class="articulo col l11 s10">
-                    <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
-                  data-delay="50"
-                  data-tooltip="Ver conversación completa"><a class="material-icons" href="{% url "publications_gallery_groups:publication_photo_detail" node.id %}">open_in_new</a></span>
-               {% if user.id == node.author.id %}
-               <span data-id="{{ node.pk }}"
-                                      class="top-options edit-comment tooltipped"
-                                      data-position="bottom"
-                                      data-delay="50"
-                                      data-tooltip="Editar comentario"><i class="material-icons">mode_edit</i></span>
-               {% endif %}
                     <h2 class="author-header"><a
                         href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                         {% if node.parent %}
@@ -97,34 +87,13 @@
                     </div>
                     <div class="row">
                         <div class="divider"></div>
-                        <div class="options_comentarios col s12">
-                            <ul class="opciones">
-                                        {% if user.id == object.owner_id or user.id == node.author.id %}
-                                            <li class="trash-comment" title="Borrar comentario"><i
-                                                    class="material-icons">delete_forever</i>
-                                            </li>
-                                        {% endif %}
-                                            {% comment %} Si el usuario esta logueado {% endcomment %}
-
-                                            <li title="No me gusta" class="hate-comment"
-                                                >
-                                                <i class="material-icons md-18">keyboard_arrow_down</i>
-                                                <i class="hate-value">{% if hates|length > 0 %} {{ hates|length|intword }}{% endif %}</i>
-                                            </li>
-
-
-                                            <li title="¡Me gusta!" class="like-comment">
-                                                <i class="material-icons md-18">keyboard_arrow_up</i>
-                                                <i class="like-value">{% if likes|length > 0 %} {{ likes|length|intword }}{% endif %}</i>
-                                            </li>
-                                        <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}"><i class="material-icons md-18">reply</i>
-                                        </li>
-                                    </ul>
-             </div>
+                        {% with photo.owner as user_profile %}
+                {% include "publications_base/publication_options.html" %}
+            {% endwith %}
          </div>
          {% if user.id == node.author.id %}
-         <div id="p_author-controls-{{ node.pk }}"
-                                 class="p_author-controls">
+         <div id="author-controls-{{ node.pk }}"
+                                 class="author-controls">
                                 <div class="row">
                                     <div class="col s12">
                                         <form method="post" accept-charset="utf-8">
