--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -5,7 +5,7 @@
 {% load group_utils %}
 {% load static %}
     {% for node in publications %}
-        <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
+        <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}">
                 <div class="wrapper"
                      {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
