--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -6,7 +6,7 @@
 {% load static %}
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
-        <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
+        <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}">
                 <div class="wrapper"
                      {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
