--- a/skyfolk/templates/publications_base/publication_options.html
+++ b/skyfolk/templates/publications_base/publication_options.html
@@ -1,4 +1,4 @@
-{% load group_utils %}
+{% load group_utils app_filters %}
 
 <div class="options_comentarios">
         <ul class="opciones">
@@ -21,14 +21,14 @@
                 <i class="material-icons md-18">keyboard_arrow_up</i>
                 <i class="like-value">{{ node.likes|zero_to_empty }}</i>
             </li>
+        {% if node|classname == 'Publication' or node|classname == 'PublicationGroup' %}
             <li id="share-{{ node.pk }}" data-id="{{ node.pk }}"
                 class={% if node.have_shared %}"remove-timeline"
-                title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi
-                    skyline" {% endif %}
-            >
+                title="Eliminar de mi skyline" {% else %}"add-timeline" title="Añadir a mi skyline" {% endif %}>
             <i class="material-icons md-18">format_quote</i>
             <i class="share-values"> {{ node.total_shared|zero_to_empty }}</i>
             </li>
+        {% endif %}
             <li title="Responder" class="reply-comment"
                 id="reply-caja-comentario-{{ node.pk }}">
                 <i class="material-icons md-18">reply</i>
