--- a/skyfolk/templates/services/delete_service.html
+++ b/skyfolk/templates/services/delete_service.html
@@ -19,7 +19,7 @@
                     {% csrf_token %}
                     <div class="col s12">
                         <input class="btn red" name="ok" type="submit" value="{% trans 'Yes' %}" />
-                        <a href="{% url 'user_services' %}" class="btn blue">{% trans "No" %}</a>
+                        <a href="{% url 'user_services' %}" class="btn blue white-text">{% trans "No" %}</a>
                     </div>
                 </form>
             </div>
