--- a/dash/templates/dash/create_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/create_dashboard_workspace_ajax.html
@@ -21,7 +21,7 @@
                         <div class="input-field col s12">
                             {{ field.errors }}
                             {% if field.help_text %}
-                                <small>{{ field.help_text }}</small>
+                                <p>{{ field.help_text }}</p>
                             {% endif %}
                             {{ field }}
                             {{ field.label_tag }}
