--- a/dash/templates/dash/delete_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/delete_dashboard_workspace_ajax.html
@@ -2,21 +2,23 @@
 <div class="generic-content-wrapper">
     <div class="wrapper-bg"></div>
     <div class="hero-unit-small">
-        <h2 class="content-title">{% trans "Delete dashboard workspace" %}</h2>
+        <h4 class="content-title center">{% trans "Delete dashboard workspace" %}</h4>
     </div>
 
-    <div class="content-body">
-        <form method="post" action="{% url 'dash.delete_dashboard_workspace' workspace.pk %}" enctype="multipart/form-data" class="form-horizontal">
+    <div class="content-body center">
+        <p>{% blocktrans with workspace.name as workspace_name %}Are you sure you want to delete the dashboard workspace
+            {{ workspace_name }}?{% endblocktrans %}</p>
+        <form method="post" action="{% url 'dash.delete_dashboard_workspace' workspace.pk %}"
+              enctype="multipart/form-data" class="form-horizontal">
             {% csrf_token %}
-            <ul class="content-listing generic-form">
-                <li>
-                    <p class="alert alert-error">{% blocktrans with workspace.name as workspace_name %}Are you sure you want to delete the dashboard workspace {{ workspace_name }}?{% endblocktrans%}</p>
-                </li>
+            <ul class="row content-listing generic-form center">
                 <li class="buttons control-group">
-                    <div class="controls">
-                        <button type="submit" name="delete" class="btn white red-text">{% trans "Delete" %}</button>
-                        <input type="hidden" name="next" value="{% url 'dash.edit_dashboard' workspace.slug %}" />
-                        <button type="submit" class="btn blue">{% trans "Cancel" %}</button>
+                    <div class="row">
+                        <div class="col s12">
+                            <button type="submit" name="delete" class="btn white red-text">{% trans "Delete" %}</button>
+                            <input type="hidden" name="next" value="{% url 'dash.edit_dashboard' workspace.slug %}"/>
+                            <button type="submit" class="btn blue">{% trans "Cancel" %}</button>
+                        </div>
                     </div>
                 </li>
             </ul>
