--- a/dash/templates/dash/edit_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/edit_dashboard_workspace_ajax.html
@@ -2,7 +2,7 @@
 <div class="generic-content-wrapper">
     <div class="wrapper-bg"></div>
     <div class="row hero-unit-small">
-        <h4 class="content-title">{% trans "Edit dashboard workspace" %}</h4>
+        <h4 class="content-title center">{% trans "Edit dashboard workspace" %}</h4>
     </div>
 
     <div class="row content-body">
@@ -21,7 +21,7 @@
                         <div class="input-field col s12">
                             {{ field.errors }}
                             {% if field.help_text %}
-                                <small>{{ field.help_text }}</small>
+                                <p>{{ field.help_text }}</p>
                             {% endif %}
                             {{ field }}
                             {{ field.label_tag }}
