--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -1,5 +1,4 @@
-﻿
-{% load static %}
+﻿{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,13 +6,14 @@
         <title>¡Bienvenido a Skyfolk, {{ user_profile }}!</title>
     {% endblock %}
     <meta charset="utf-8"/>
-
+        <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
+        <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
         <link type="text/css" rel="stylesheet" href="{% static "css/materialize.css" %}" media="screen,projection"/>
         <link rel="stylesheet" type="text/css" href="{% static "css/welcome.css" %}"/>
         <link rel="stylesheet" href="{% static "themes/google/google.css" %}">
         <link rel="stylesheet" href="{% static "dist/sweetalert.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "fonts/iconfont/material-icons.css" %}">
-
+        <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}"/>
     <style>
         .default-div {
             background-color: #fff;
@@ -48,14 +48,10 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <div class="col l6 m5 s12 right">
                     <a onclick="location.href='{% url 'user_profile:welcome_step_1' %}'"
                        class="waves-effect waves-light btn right blue darken-1">Configurar cuenta</a>
-                </div>
-                <div class="col l6 m5 s12 left">
                     <a href="{% url 'user_profile:profile' username=user_profile %}"
-                       class="waves-effect waves-light btn left blue darken-1">Omitir</a>
-                </div>
+                       class="waves-effect waves-light btn right blue darken-1">Omitir</a>
             </div>
         </div>
     {% endblock %}
