--- a/skyfolk/templates/account/reccomendation_after_login.html
+++ b/skyfolk/templates/account/reccomendation_after_login.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="wrapper white z-depth-1">
         <div class="col s12 m12 l12 title">
-            <h3 class="grey-text darken-1 center-align">Puedes empezar siguiendo a estos perfiles... </h3>
+            <h5 class="grey-text darken-1 center-align">Puedes empezar siguiendo a estos perfiles... </h5>
         </div>
         <div class="row">
         {% if object_list %}
@@ -25,20 +25,20 @@
                             <div class="chip">{{ tag.title }}</div>
                         {% endfor %}
                         </div>
-                        <div class="card-action">
+                        <div class="card-action right-align">
                             {% if user.id|is_blocked:item.id %}
                                 <button data-user-id="{{ item.user_id }}"
-                                        class="btn waves-effect waves-light blue darken-1 unblock-user right" type="submit">
+                                        class="btn waves-effect waves-light blue darken-1 unblock-user" type="submit">
                                     Desbloquear
                                 </button>
                             {% elif user.id|exist_request:item.id %}
                                 <button data-user-id="{{ item.id }}"
-                                        class="btn waves-effect waves-light blue darken-1 follow_request right" type="submit">
+                                        class="btn waves-effect waves-light blue darken-1 follow_request" type="submit">
                                     Solicitud enviada
                                 </button>
                             {% else %}
                                 <button data-user-id="{{ item.id }}"
-                                        class="btn waves-effect waves-light blue darken-1 follow-user right" type="submit">
+                                        class="btn waves-effect waves-light blue darken-1 follow-user" type="submit">
                                     {% if user.id|is_follow:item.id %}Dejar de seguir {% else %}
                                         Seguir{% endif %}</button>
                             {% endif %}
