--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -49,14 +49,10 @@
                 <div class="col s12">
                     <div class="divider"></div>
                     <br>
-                    <div class="col l6 m5 s12 right">
                         <button type="submit" class="waves-effect waves-light btn right blue darken-1">He acabado
                         </button>
-                    </div>
-                    <div class="col l6 m5 s12 left">
                         <a href="{% url 'user_profile:profile' username=user_profile %}"
-                           class="waves-effect waves-light btn left blue darken-1">Omitir</a>
-                    </div>
+                           class="waves-effect waves-light btn right blue darken-1">Omitir</a>
                 </div>
             </div>
         </form>
