--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -13,39 +13,39 @@
     <meta name="keywords" content="skyfolk, social, login, registro, sky, folk, red social, red">
     <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
 
-        <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "css/login-signup.css" %}">
-        <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection">
-        <style>
-            .progress {
-                margin: 0 !important;
-            }
-        </style>
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/login-signup.css" %}">
+    <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection">
+    <style>
+        .progress {
+            margin: 0 !important;
+        }
+    </style>
 
 
-        <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
-        <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
-        <script>
-            $(window).load(function () {
-                $('.progress').fadeOut();
-            });
-        </script>
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-            ga('create', 'UA-72424818-2', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+    <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
+    <script>
+        $(window).load(function () {
+            $('.progress').fadeOut();
+        });
+    </script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-72424818-2', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 
     {% block extra_head %} {% endblock %}
 </head>
@@ -92,6 +92,9 @@
             <li>
                 <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Blog</a>
+                </div>
+                <div class="chip">
+                    <a class="blue-text text-darken-1" href="{% url "feedback:feedback_contact" %}">Contacto</a>
                 </div>
             </li>
             {% comment %}
