--- a/dash/templates/dash/layouts/base_edit_layout.html
+++ b/dash/templates/dash/layouts/base_edit_layout.html
@@ -81,9 +81,9 @@
                     }),
                     success: function (data) {
                         if (data.errors) {
-                            Materialize.toast("Hubo un error al intercambiar los widgets, prueba a intentarlo de nuevo.");
+                            Materialize.toast("Hubo un error al intercambiar los widgets, prueba a intentarlo de nuevo.", 1200);
                         } else {
-                            Materialize.toast("¡Tus widgets es han movido correctamente!");
+                            Materialize.toast("¡Tus widgets es han movido correctamente!", 1200);
                         }
                     }
                 })
