--- a/skyfolk/templates/groups/list_group.html
+++ b/skyfolk/templates/groups/list_group.html
@@ -90,59 +90,7 @@
         <div class="col s12 wrapper-groups">
             <div class="row">
                 {% for group in object_list %}
-                <div class="col l3 m10 s12 offset-m1">
-                    <div class="personal-card">
-                        <div class="row">
-                            <div class="col s12">
-                                <div class="header">
-                                    {% if group.back_image  %}
-                                    <img class="back-profile-user"
-                                    src="{{ group.back_image.url }}">
-                                    {% else %}
-                                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
-                                    {% endif %}
-                                    <i class="material-icons md-24 group-icon"
-                                        title="{{ group.users.all|length }}">group</i>
-                                    <div class="bg-user">
-                                        <div onclick="location.href='/group/{{ group.slug }}'"
-                                            class="profile-user-bg">
-                                            {% if group.avatar %}
-                                            <img src="{{ group.avatar.url }}"
-                                            alt="avatar_group">
-                                            {% else %}
-                                            <img src="{% static "img/nuevo.png" %}"
-                                            alt="avatar_group">
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="row">
-                                <div class="col s12">
-                                    <div class="name-friend">
-                                        <a class="truncate"
-                                            href="{% url "user_groups:group-profile" groupname=group.slug %}">
-                                            {% if not group.is_public %}<i title="Este grupo es privado" class="material-icons md-18">lock</i>{% endif %}
-                                            {{ group.name }}</a>
-                                        <p class="truncate">{{ group.description|truncatechars:100 }}</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="divider"></div>
-                            <div class="row">
-                                <div class="col s12 group-data">
-                                    {% for tag in group.tags.most_common|slice:":5" %}
-                                    <span class="chip">
-                                        {{ tag.name|truncatechars:9 }}
-                                    </span>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    {% include "groups/item_group.html" %}
                 {% endfor %} 
             </div>
         </div>
