target=_blank added to external_link

--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -138,7 +138,7 @@
                                                 <p>{{ node.publication_group_multimedia_video_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a class="white-text blue right btn right" href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
+                                                <a class="white-text blue right btn right" target="_blank" href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
