--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -174,7 +174,7 @@ Base para la interfaz en comun de todos los usuarios.
     {% endblock %}
     {% block shortcuts %}
     <!-- Atajos del usuario -->
-    <div class="default-div" id="atajos-keyboard-profile">
+    <div class="default-div compose-div" id="atajos-keyboard-profile">
         <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
             <caption class="atajos-title">
                 <p class="hide-on-med-and-down">Atajos de teclado</p>
