--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -138,7 +138,7 @@
                                 <p>{{ item.extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a class="white-text blue right btn right" href="{{ item.extra_content.url }}">Ver</a>
+                                <a class="white-text blue right btn right" target="_blank" href="{{ item.extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
