--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -82,7 +82,7 @@
                                         <p>{{ pub.theme_extra_content.description }}</p>
                                     </div>
                                     <div class="card-action">
-                                        <a class="white-text blue right btn right"
+                                        <a class="white-text blue right btn right" target="_blank"
                                            href="{{ pub.theme_extra_content.url }}">Ver</a>
                                     </div>
                                 </div>
