--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -198,7 +198,7 @@ Template para las busquedas
                                                         <p>{{ item.object.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a class="white-text blue right btn right" href="{{ item.object.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" target="_blank" href="{{ item.object.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
@@ -421,7 +421,7 @@ Template para las busquedas
                                                                         <p>{{ node.shared_publication.extra_content.description }}.</p>
                                                                     </div>
                                                                     <div class="card-action">
-                                                                        <a class="white-text blue right btn right" href="{{ node.shared_publication.extra_content.url }}">Ver</a>
+                                                                        <a class="white-text blue right btn right" target="_blank" href="{{ node.shared_publication.extra_content.url }}">Ver</a>
                                                                     </div>
                                                                 </div>
                                                             {% endif %}
@@ -429,6 +429,7 @@ Template para las busquedas
                                                     </div>
                                                     <div class="card-action">
                                                         <a class="white-text blue right btn right"
+                                                           target="_blank"
                                                            href="/publication/{{ node.shared_publication.pk }}">Ver</a>
                                                     </div>
                                                 </div>
@@ -501,7 +502,7 @@ Template para las busquedas
                                                                         <p>{{ item.object.shared_group_publication.extra_content.description }}.</p>
                                                                     </div>
                                                                     <div class="card-action">
-                                                                        <a class="white-text blue right btn right" href="{{ item.object.shared_group_publication.extra_content.url }}">Ver</a>
+                                                                        <a class="white-text blue right btn right" target="_blank" href="{{ item.object.shared_group_publication.extra_content.url }}">Ver</a>
                                                                     </div>
                                                                 </div>
                                                             {% endif %}
@@ -509,6 +510,7 @@ Template para las busquedas
                                                     </div>
                                                     <div class="card-action">
                                                         <a class="white-text blue right btn right"
+                                                           target="_blank"
                                                            href="{% url "publications_groups:detail_group_publication" pk=item.object.shared_group_publication.pk %}">Ver</a>
                                                     </div>
                                                 </div>
@@ -550,7 +552,7 @@ Template para las busquedas
                                                         <p>{{ item.object.extra_content.description }}</p>
                                                     </div>
                                                     <div class="card-action">
-                                                        <a class="white-text blue right btn right" href="{{ item.object.extra_content.url }}">Ver</a>
+                                                        <a class="white-text blue right btn right" target="_blank" href="{{ item.object.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
                                             {% endif %}
