--- a/dash/templates/dash/add_dashboard_widget_ajax.html
+++ b/dash/templates/dash/add_dashboard_widget_ajax.html
@@ -1,4 +1,5 @@
-{% load i18n %}
+{% load i18n dash_tags %}
+
 <div class="container">
     <div class="row">
         <div class="col l4 s12 offset-l4">
@@ -26,8 +27,20 @@
                                 {% if field.help_text %}
                                 <small>{{ field.help_text }}</small>
                                 {% endif %}
-                                {{ field }}
-                                {{ field.label_tag }}
+                                {% if 'FileInput' in field|field_type %}
+                                    <div class="file-field input-field">
+                                        <div class="btn">
+                                            <span>{{ field.label }}</span>
+                                            {{ field }}
+                                        </div>
+                                        <div class="file-path-wrapper">
+                                            <input class="file-path validate" type="text">
+                                        </div>
+                                    </div>
+                                {% else %}
+                                    {{ field }}
+                                    {{ field.label_tag }}
+                                {% endif %}
                             </div>
                         </div>
                         {% endfor %}
