--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -87,7 +87,7 @@
                                 <p>{{ node.publication_photo_extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a class="white-text blue right btn right" href="{{ node.publication_photo_extra_content.url }}">Ver</a>
+                                <a class="white-text blue right btn right" target="_blank" href="{{ node.publication_photo_extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
