--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -78,7 +78,7 @@
                                                 <p>{{ node.publication_group_multimedia_photo_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a class="white-text blue right btn right" href="{{ node.publication_group_multimedia_photo_extra_content.url }}">Ver</a>
+                                                <a class="white-text blue right btn right" target="_blank" href="{{ node.publication_group_multimedia_photo_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
