--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -83,7 +83,7 @@
                                 <p>{{ node.extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a class="white-text blue right btn right" href="{{ node.extra_content.url }}">Ver</a>
+                                <a class="white-text blue right btn right" target="_blank" href="{{ node.extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
